# guild_schema_manager

./: .env.example  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.ja.md  README.md  clear_pycache.sh  pyproject.toml
.devcontainer/: devcontainer.json
docs/: 404.md  README.md
docs/en/: README.md  architecture.md  commands.md  deployment.md  diff-and-apply.md  permissions-and-security.md  schema.md  testing.md
docs/ja/: README.md  architecture.md  commands.md  deployment.md  diff-and-apply.md  permissions-and-security.md  schema.md  testing.md
docs/schema/: README.md
docs/schema/latest/: schema.json
docs/schema/v1/: schema.json
src/bot/: __main__.py  app.py  config.py  localization.py  logging_utils.py  messages.yaml  session_store.py
src/bot/cogs/: __init__.py
src/bot/commands/: __init__.py  context.py  responders.py  service.py  translator.py
src/bot/diff/: __init__.py  engine.py  models.py
src/bot/executor/: __init__.py  discord_executor.py  engine.py  errors.py  noop.py
src/bot/interactions/: __init__.py
src/bot/planner/: models.py  planner.py
src/bot/rendering/: markdown.py
src/bot/schema/: __init__.py  models.py  parser.py
src/bot/security/: __init__.py  guards.py
src/bot/snapshot/: __init__.py  builder.py
tests/: test_app_file_trust_mode.py  test_app_localization.py  test_cogs_structure.py  test_config.py  test_diff_engine.py  test_discord_executor.py  test_executor.py  test_logging_utils.py  test_rendering.py  test_schema_validation.py  test_service_and_security.py  test_session_store.py  test_snapshot_builder.py
(+49 files in other folders)
